force-app/main/default/objects/Special_Product_Request__c/Special_Product_Request__c.object-meta.xml
<CustomObject>
    <label>Special Product Request</label>
    <nameField>
        <displayFormat>SPR-{YYYY}{MM}{DD}-{00}</displayFormat>
        <label>SPR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Product Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>