force-app/main/default/objects/Special_Product_Request__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Read only field. Auto-populated with values from Feasibility, Extra Cost and Time Limit fields after approval from Finance. Visible to Sales profiles only</description>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>