force-app/main/default/objects/Special_Product_Request__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>TextArea</type>
</CustomField>