force-app/main/default/objects/Special_Product_Request__c/fields/Cost_Information_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Cost_Information_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Information Confirmed</label>
    <type>Checkbox</type>
</CustomField>