force-app/main/default/objects/Special_Product_Request__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <inlineHelpText>Date entered during the Production Preparation phase</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>