force-app/main/default/objects/Special_Product_Request__c/fields/Delivery_Lead_Time_weeks__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Lead_Time_weeks__c</fullName>
    <inlineHelpText>From the date the order is confirmed</inlineHelpText>
    <label>Delivery Lead Time (weeks)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>