force-app/main/default/objects/Special_Product_Request__c/fields/Delivery_Site_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Site_City__c</fullName>
    <formula>Opportunity__r.Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Site (City)</label>
    <type>Text</type>
</CustomField>