force-app/main/default/objects/Special_Product_Request__c/fields/Delivery_Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Site_Country__c</fullName>
    <formula>Opportunity__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Site (Country)</label>
    <type>Text</type>
</CustomField>