force-app/main/default/objects/Special_Product_Request__c/fields/Development_Fees__c.field-meta.xml
<CustomField>
    <fullName>Development_Fees__c</fullName>
    <inlineHelpText>Development fees are services, subcontracting, express transportation, specific supplying, test documents...</inlineHelpText>
    <label>Development Fees</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>