force-app/main/default/objects/Special_Product_Request__c/fields/End_Item_Nr__c.field-meta.xml
<CustomField>
    <fullName>End_Item_Nr__c</fullName>
    <label>End Item Nr</label>
    <length>15</length>
    <type>Text</type>
</CustomField>