force-app/main/default/objects/Special_Product_Request__c/fields/Expected_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Production_Date__c</fullName>
    <inlineHelpText>This date has to be entered by the requestor when placing the special product request</inlineHelpText>
    <label>Expected Production Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>