force-app/main/default/objects/Special_Product_Request__c/fields/Extra_Cost_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Extra_Cost_per_Unit__c</fullName>
    <inlineHelpText>Extra cost is calculated based on the quantity requested</inlineHelpText>
    <label>Extra Cost per Unit</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>