force-app/main/default/objects/Special_Product_Request__c/fields/Modification_Complexity_Level__c.field-meta.xml
<CustomField>
    <fullName>Modification_Complexity_Level__c</fullName>
    <description>This field will be filled by special product team, during phase 1 - pre-study.</description>
    <label>Modification Complexity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - No Study</fullName>
            </value>
            <value>
                <fullName>2 - Already Validated Modification</fullName>
            </value>
            <value>
                <fullName>3 - Requiring Validation Modification</fullName>
            </value>
            <value>
                <fullName>4 - New Part Creation</fullName>
            </value>
            <value>
                <fullName>5 - Others - Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>