force-app/main/default/objects/Special_Product_Request__c/fields/Modification_Description__c.field-meta.xml
<CustomField>
    <fullName>Modification_Description__c</fullName>
    <label>Modification Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>