force-app/main/default/objects/Special_Product_Request__c/fields/Modification_Type__c.field-meta.xml
<CustomField>
    <fullName>Modification_Type__c</fullName>
    <description>Combination of Bed and Furniture modification types, along with Other Modification Types.
- (Incident Ticket- 00958838; CR: CR00031574)</description>
    <label>Modification Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restraint</fullName>
            </value>
            <value>
                <fullName>Stickers</fullName>
            </value>
            <value>
                <fullName>Pendant</fullName>
            </value>
            <value>
                <fullName>Out of package</fullName>
            </value>
            <value>
                <fullName>Casters - bed mover</fullName>
            </value>
            <value>
                <fullName>Casters - others</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Nurse call cable</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Special color</fullName>
            </value>
            <value>
                <fullName>Sleep deck</fullName>
            </value>
            <value>
                <fullName>Structure</fullName>
            </value>
            <value>
                <fullName>To be categorized</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Not Pluvigner Product</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>