force-app/main/default/objects/Special_Product_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Special Product Requests</relationshipLabel>
    <relationshipName>Special_Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>