force-app/main/default/objects/Special_Product_Request__c/fields/Order_Entry_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Email__c</fullName>
    <label>Order Entry Email</label>
    <type>Email</type>
</CustomField>