force-app/main/default/objects/Special_Product_Request__c/fields/OwnedByUser__c.field-meta.xml
<CustomField>
    <fullName>OwnedByUser__c</fullName>
    <formula>LEFT(OwnerId, 3)  = &apos;005&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnedByUser</label>
    <type>Checkbox</type>
</CustomField>