force-app/main/default/objects/Special_Product_Request__c/fields/Phase_3_Tasks_Created__c.field-meta.xml
<CustomField>
    <fullName>Phase_3_Tasks_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phase 3 Tasks Created</label>
    <type>Checkbox</type>
</CustomField>