force-app/main/default/objects/Special_Product_Request__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>0 Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>1a Pending Finance Approval</fullName>
            </value>
            <value>
                <fullName>1b Pending Sales Approval</fullName>
            </value>
            <value>
                <fullName>1 Pre-Study</fullName>
            </value>
            <value>
                <fullName>2 Product Design</fullName>
            </value>
            <value>
                <fullName>3 Production Preparation</fullName>
            </value>
            <value>
                <fullName>4 Manufacturing / Delivery</fullName>
            </value>
            <value>
                <fullName>5 Closed</fullName>
            </value>
            <value>
                <fullName>8 Cancelled</fullName>
            </value>
            <value>
                <fullName>9 Rejected</fullName>
            </value>
            <value>
                <fullName>2 Design Product</fullName>
                <isActive>false</isActive>
                <label>2 Design Product</label>
            </value>
            <value>
                <fullName>3 Prepare Production</fullName>
                <isActive>false</isActive>
                <label>3 Prepare Production</label>
            </value>
            <value>
                <fullName>4 Manufactured / Delivery</fullName>
                <isActive>false</isActive>
                <label>4 Manufactured / Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>