force-app/main/default/objects/Special_Product_Request__c/fields/Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Date__c</fullName>
    <inlineHelpText>Date entered during the Production Preparation phase</inlineHelpText>
    <label>Actual Production Date</label>
    <type>Date</type>
</CustomField>