force-app/main/default/objects/Special_Product_Request__c/fields/R_D_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>R_D_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>R&amp;D Approval Required</label>
    <type>Checkbox</type>
</CustomField>