force-app/main/default/objects/Special_Product_Request__c/validationRules/Cancel_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Phase__c,&quot;8 Cancelled&quot;),
ISBLANK( Cancel_Reason__c))</errorConditionFormula>
    <errorDisplayField>Cancel_Reason__c</errorDisplayField>
    <errorMessage>You must enter a Cancel Reason</errorMessage>
</ValidationRule>