force-app/main/default/objects/Special_Product_Request__c/validationRules/End_Item_Nr_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Item_Nr_Required</fullName>
    <active>true</active>
    <description>End Item Nr required to move to Production Preparation phase</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Phase__c, &apos;3 Production Preparation&apos;),
 ISBLANK( End_Item_Nr__c )   
)</errorConditionFormula>
    <errorDisplayField>End_Item_Nr__c</errorDisplayField>
    <errorMessage>End Item Nr is required to move to the Production Preparation phase</errorMessage>
</ValidationRule>