force-app/main/default/objects/Special_Product_Request__c/validationRules/Quantity_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_cannot_be_changed</fullName>
    <active>true</active>
    <description>Cannot change Quantity field once the process has started</description>
    <errorConditionFormula>AND(
  ISCHANGED( Quantity__c ),
  NOT(ISPICKVAL( Phase__c , &quot;Not started&quot;)),
  $User.Id  &lt;&gt;  OwnerId 
   )</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity cannot be changed once the process has started</errorMessage>
</ValidationRule>