force-app/main/default/objects/Special_Product_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Phase__c</columns>
    <columns>Cost_Information_Confirmed__c</columns>
    <columns>R_D_Approval_Required__c</columns>
    <columns>Comments__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>