force-app/main/default/objects/Special_Product_Request__c/listViews/PLV_GSC_Special_Product_Request.listView-meta.xml
<ListView>
    <fullName>PLV_GSC_Special_Product_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>PLV GSC</label>
    <queue>PLV_GSC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>