force-app/main/default/objects/Special_Product_Request__c/listViews/PLV_Marketing_Special_Product_Request.listView-meta.xml
<ListView>
    <fullName>PLV_Marketing_Special_Product_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>PLV Marketing</label>
    <queue>PLV_Marketing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>