force-app/main/default/objects/Special_Product_Request__c/listViews/PLV_R_D_Special_Product_Request.listView-meta.xml
<ListView>
    <fullName>PLV_R_D_Special_Product_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>PLV R&amp;D</label>
    <queue>PLV_R_D</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>