force-app/main/default/objects/Special_Product_Request__c/listViews/PLV_Regulatory_Special_Product_Request.listView-meta.xml
<ListView>
    <fullName>PLV_Regulatory_Special_Product_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>PLV Regulatory</label>
    <queue>PLV_Regulatory</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>