force-app/main/default/objects/Special_Product_Request__c/listViews/PLV_Special_Product_Requests_Special_Product_Request.listView-meta.xml
<ListView>
    <fullName>PLV_Special_Product_Requests_Special_Product_Request</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Phase__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <label>PLV Special Product Requests</label>
    <language>en_GB</language>
    <queue>PLV_Special_Product_Requests</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>